// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "64.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-64.8300",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-307.0100",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "NPR",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "currencyCode": "NPR",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "RUB",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "currencyCode": "RUB",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "currencyCode": "LVL",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "LVL",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "RUB",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "LVL",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "64.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "RUB",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "ipsa quo autem",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-64.8300",
        "currencyCode": "RUB",
        "note": "ipsa quo autem",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-307.0100",
        "currencyCode": "CLP",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "64.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "RUB",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "ipsa quo autem",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-64.8300",
        "currencyCode": "RUB",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "ipsa quo autem",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-307.0100",
        "currencyCode": "CLP",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "64.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "RUB",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "ipsa quo autem",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-64.8300",
        "currencyCode": "RUB",
        "note": "ipsa quo autem",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-307.0100",
        "currencyCode": "CLP",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "307.0100",
        "currencyCode": "CLP",
        "note": "quam nisi amet",
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "natus quae ipsa",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "note": "natus quae ipsa",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "soluta esse necessitatibus",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "dignissimos aliquam quam",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "soluta esse necessitatibus",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "dignissimos aliquam quam",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "receiptId": "2bdc7236-9293-45ed-81ad-a97eeaa55807",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "3c64a3e6-4526-49b7-8189-ee3cf06ab4fd",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "b31a15a8-65a5-4f0e-b4ae-74376f0b125d",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-709.4700",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "PLN",
        "id": "4090c524-ca88-4d39-b49b-b2fd73941c6a",
        "lockedTimestamp": null,
        "note": "Sint enim nesciunt totam ex culpa minus voluptatem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "554b210f-5368-4766-9f28-2f5b58021dbd",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4090c524-ca88-4d39-b49b-b2fd73941c6a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;
